# http-server-from-scratch

./: ACTION_PLAN.md  CMakeLists.txt  HttpRequest.c  HttpRequest.h  HttpResponse.h  README  README.md  main.c
examples/: main.c
examples/todos-handler-example/: sqlite3-test.c
include/http_server/: Arena.h  Config.h  Dictionary.h  HttpBody.h  HttpBuffer.h  HttpHeaders.h  HttpRequest.h  HttpRequestLine.h  HttpResponse.h  HttpRouter.h  HttpServer.h  ParseResult.h
lib/: Dictionary.c  Dictionary.h  linked_node_macro.h  parser.c  parser.h
src/: Arena.c  Connection.c  Connection.h  ConsumerCode.c  Dictionary.c  HttpBody.c  HttpBody.h  HttpHeaders.c  HttpHeaders.h  HttpRequest.c  HttpRequest.h  HttpRequestLine.c  HttpRequestLine.h  HttpResponse.c  HttpResponse.h  HttpRouter.c  HttpRouter.h  HttpServer.c  HttpServer.h  Networking.c  Networking.h  ParseResult.c  ParseResult.h  main.c  parser.c  parser.h
tests/: ArenaTests.c  BodyTests.c  ParserTests.c  RequestTests.c  ResponseTests.c  StreamTests.c  test_harness.c  test_harness.h
